@@ -566,9 +566,6 @@ Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
 
 **从上述结果可以看出，JDK 1.6下，会出现“PermGen Space”的内存溢出，而在 JDK 1.7和 JDK 1.8 中，会出现堆内存溢出，并且 JDK 1.8中 PermSize 和 MaxPermGen 已经无效。因此，可以大致验证 JDK 1.7 和 1.8 将字符串常量由永久代转移到堆中，并且 JDK 1.8 中已经不存在永久代的结论**
 
-
-
-
 # 4、对象访问与内存分配
 
 **4.1、假设该语句出现在方法体中：**
@@ -581,6 +578,15 @@ Object obj = new Object();
 
 - 使用句柄池访问：最大好处是reference中存放的是最稳定的句柄地址，在对象被移动时只会改变句柄中的实例数据指针。而reference本身不需要修改
 - 直接使用指针：最大好处是速度快，节省了一次指针定位的时间开销。
+
+**4.3、内存分配区域**
+
+*问题：是不是所有的对象和数组都会在堆内存分配空间？*
+
+不一定，随着JIT编译器的发展，在编译期间，如果JIT经过逃逸分析，发现有些对象没有逃逸出方法，那么有可能堆内存分配会被优化成栈内存分配。但是这也并不是绝对的，在开启逃逸分析之后，也并不是所有对象都没有在堆上分配
+
+什么是[逃逸分析](https://github.com/chenlanqing/learningNote/blob/master/Java/JavaSE/Java-JVM/JVM-Java%E8%99%9A%E6%8B%9F%E6%9C%BA.md#141%E9%80%83%E9%80%B8%E5%88%86%E6%9E%90)
+
 
 # 5、Class 类文件结构
 
@@ -1380,15 +1386,19 @@ public class StaticPai{
 
 - 后端编译器：在程序运行时期间将字节码转变成机器码，如 HotSpot 虚拟机自带的JIT(Just In Time Compiler)编译器另外还有可能会碰到静态提前编译器直接将*.java文件编译成本地机器码，如GCJ等；
 
+- AOT编译器：.java文件将直接转变为机器码
+
 ## 10.2、javac 编译
+
+![image](https://github.com/chenlanqing/learningNote/blob/master/Java/JavaSE/Java-JVM/image/Javac%E7%BC%96%E8%AF%91%E8%BF%87%E7%A8%8B%E7%9A%84%E7%9A%84%E4%B8%BB%E4%BD%93%E4%BB%A3%E7%A0%81.jpg)
 
 ### 10.2.1、Javac 编译过程
 
 从 Sun Javac 的代码来看，编译过程大致分为：
 
 - 解析与填充符号表的过程；
-= 插入式注解处理器的注解处理过程;
-- 分析与字节码生成过程;
+- 插入式注解处理器的注解处理过程;
+- 分析与字节码生成过程：标注筛查、数据及控制流分析、解语法糖、字节码生成
 
 javac编译动作的入口是 com.sun.tools.javac.main.JavaCompiler类，上述三个过程逻辑集中在这个类的：compile()和compile2()方法中.
 
@@ -1417,8 +1427,11 @@ javac编译动作的入口是 com.sun.tools.javac.main.JavaCompiler类，上述�
 	在语法树上仍可以看到字面量 "1"，"2"以及操作符"+"，但是在经过常量折叠之后，将会被折叠成字面量 "3";由于编译期间进行了常量折叠，所以在代码中定义 "a=1+2"和"a=3"并不会对程序性能上有所影响。其在Javac的源码实现类是：com.sun.tools.javac.comp.Attr 和 com.sun.tools.javac.comp.Check；
 
 - 数据及控制流分析：是对程序上下文逻辑的更进一步的验证，它可以检查出诸如程序局部变量在使用前是否赋值，方法的每条路径是否都有返回值，是否所有的受检查异常都被正确处理的等问题。将局部变量声明为 final，对运行期是没有影响的，变量的不变性仅仅由编译器在编译期间保障。com.sun.tools.javac.comp.Flow；
-(3).解语法糖：com.sun.tools.javac.comp.Lower
-(4).字节码生成：是Javac编译过程的最后一个阶段
+
+- 解语法糖：com.sun.tools.javac.comp.Lower
+
+- 字节码生成：是Javac编译过程的最后一个阶段
+	
 	仅仅是把前面各个步骤所生成的信息转化成字节码写到磁盘中，编译器还进行了少量的代码添加和转换工作：
 	实例构造器<init>()方法和类构造器<clinit>()方法就是在这个阶段添加到语法树之中的
 	com.sun.tools.javac.jvm.Gen
@@ -1459,9 +1472,25 @@ public class FanxingTest{
 ```
 上述代码在JDK7以后无法通过编译；在 Java 代码中的方法特征签名只包括了方法名称、参数顺序和参数类型，并不包含方法的返回值，因此方法的返回值并不参与重载方法的选择；对于重载方法的选择来说，加入返回值是多余的，但现在需要的解决的问题是让代码通过编译，使之可以共存于一个类中，这需要看字节码的方法特征签名，其不仅包括了 Java代码中方法特征签名中包含的那些信息，还包括方法返回值及受查异常表。为两个重载方法加入不同的返回值后，因为有了不同的字节码特征签名，它们便可以共存于一个Class文件之中；
 
-### 10.3.2、条件编译：根据布尔常量值的真假，编译器将会把分支中不成立的代码块消除掉.
+### 10.3.2、自动装箱、拆箱与遍历循环
 
-## 10.4、JIT 编译
+- 包装类在遇到 == 运算在不遇到运算符的情况下不会自动拆箱，以及他们equals()方法不处理数据转型关系
+
+### 10.3.3、条件编译：根据布尔常量值的真假，编译器将会把分支中不成立的代码块消除掉.
+
+### 10.3.4、其他语法糖
+
+内部类、枚举类、断言语句、对枚举和字符串的switch支持、try语句中定义与关闭资源
+
+## 10.4、JIT 编译-后端编译
+几个问题：
+- 为何HotSpot虚拟机要使用解释器和编译器并存的架构？
+- 为甚HotSpot虚拟机要实现两个不同的即时编译器？
+- 程序何时使用解释器执行？何时使用编译器执行？
+- 哪些程序代码会被编译为本地代码？如何编译为本地代码？
+- 如何从外部观察即时编译器的编译过程和编译结果
+
+### 10.4.1、
 
 - Java 程序最初是仅仅通过解释器解释执行的，即对字节码逐条解释执行，这种方式的执行速度相对会比较慢，尤其当某个方法或代码块运行的特别频繁时，这种方式的执行效率就显得很低，当虚拟机发现某个方法或代码块运行特别频繁时，就会把这些代码认定为“Hot Spot Code”(热点代码)，为了提高热点代码的执行效率，在运行时，虚拟机将会把这些代码编译成与本地平台相关的机器码，并进行各层次的优化，完成这项任务的正是JIT编译器；
 
@@ -1644,18 +1673,147 @@ Java 堆栈跟踪工具(Stack Trace for Java)：
 # 14、JVM 优化技术
 ## 14.1、逃逸分析
 
-- 逃逸分析的基本行为就是分析对象动态作用域：当一个对象在方法中被定义之后，它可能被外部所引用。例如作为调用参数传递到其他地方中，称为方法逃逸
+### 14.1.1、基本概念
+逃逸分析的基本行为就是分析对象动态作用域：当一个对象在方法中被定义之后，它可能被外部所引用。例如作为调用参数传递到其他地方中，称为方法逃逸
 ```java
-	public static StringBuffer craeteStringBuffer(String s1， String s2) {
-		StringBuffer sb = new StringBuffer();
-		sb.append(s1);
-		sb.append(s2);
-		// StringBuffer sb是一个方法内部变量，上述代码中直接将sb返回，这样这个StringBuffer有可能被其他
-		// 方法所改变，这样它的作用域就不只是在方法内部，虽然它是一个局部变量，称其逃逸到了方法外部
-		return sb;
-		// 如果想要 StringBuffer sb 不逃逸出方法，可以使用 sb.toString();
-	}
+public static StringBuffer craeteStringBuffer(String s1， String s2) {
+	StringBuffer sb = new StringBuffer();
+	sb.append(s1);
+	sb.append(s2);
+	// StringBuffer sb是一个方法内部变量，上述代码中直接将sb返回，这样这个StringBuffer有可能被其他
+	// 方法所改变，这样它的作用域就不只是在方法内部，虽然它是一个局部变量，称其逃逸到了方法外部
+	return sb;
+	// 如果想要 StringBuffer sb 不逃逸出方法，可以使用 sb.toString();
+}
 ```
+使用逃逸分析，编译器对代码做了如下优化：
+- 同步省略：如果一个对象被发现只能从一个线程被访问到，那么对于这个对象的操作可以不考虑同步
+- 将堆分配转化为栈分配：如果一个对象在子程序中被分配，要使指向该对象的指针永远不会逃逸，对象可能是栈分配的候选，而不是堆分配
+- 分离对象或标量替换：有的对象可能不需要作为一个连续的内存结构存在也可以被访问到，那么对象的部分（或全部）可以不存储在内存，而是存储在CPU寄存器中；
+
+在Java代码运行时，通过JVM参数可指定是否开启逃逸分析，
+- -XX:+DoEscapeAnalysis ： 表示开启逃逸分析
+- -XX:-DoEscapeAnalysis ： 表示关闭逃逸分析 从jdk 1.7开始已经默认开始逃逸分析，如需关闭，需要指定-XX:-DoEscapeAnalysis
+
+### 14.1.2、同步省略
+在动态编译同步块的时候，JIT编译器可以借助逃逸分析来判断同步块所使用的锁对象是否只能够被一个线程访问而没有被发布到其他线程；
+
+如果同步块所使用的锁对象通过这种分析被证实只能够被一个线程访问，那么JIT编译器在编译这个同步块的时候就会取消对这部分代码的同步。这个取消同步的过程就叫同步省略，也叫锁消除；在使用synchronized的时候，如果JIT经过逃逸分析之后发现并无线程安全问题的话，就会做锁消除
+
+如下代码
+```java
+public void hello() {
+	Object object = new Object();
+	synchronized(object) {
+		System.out.println(object);
+	}
+}
+// 上述代码中对object进行加锁，但是object对象的生命周期只存在于hello方法中，并不会被其他方法访问到，因此在JIT编译阶段就被优化掉了，优化成如下代码：
+public void hello(){
+	Object object = new Object();
+	System.out.println(object);
+}
+```
+### 14.1.3、标量替换
+标量（Scalar）是指一个无法再分解成更小的数据的数据。Java中的原始数据类型就是标量。相对的，那些还可以分解的数据叫做聚合量（Aggregate），Java中的对象就是聚合量，因为他可以分解成其他聚合量和标量
+
+在JIT阶段，如果经过逃逸分析，发现一个对象不会被外界访问的话，那么经过JIT优化，就会把这个对象拆解成若干个其中包含的若干个成员变量来代替。这个过程就是标量替换；
+```java
+public static void main(String[] args) {
+   alloc();
+}
+private static void alloc() {
+   Point point = new Point（1,2）;
+   System.out.println("point.x="+point.x+"; point.y="+point.y);
+}
+class Point{
+    private int x;
+    private int y;
+}
+```
+
+以上代码中，point对象并没有逃逸出alloc方法，并且point对象是可以拆解成标量的。那么，JIT就会不会直接创建Point对象，而是直接使用两个标量int x ，int y来替代Point对象
+```java
+private static void alloc() {
+   int x = 1;
+   int y = 2;
+   System.out.println("point.x="+x+"; point.y="+y);
+}
+```
+可以看到，Point这个聚合量经过逃逸分析后，发现他并没有逃逸，就被替换成两个聚合量了。
+
+那么标量替换有什么好处呢？就是可以大大减少堆内存的占用。因为一旦不需要创建对象了，那么就不再需要分配堆内存了，标量替换为栈上分配提供了很好的基础；
+
+### 14.1.4、栈上分配
+在Java虚拟机中，对象是在Java堆中分配内存的；但是，有一种特殊情况，那就是如果经过逃逸分析后发现，一个对象并没有逃逸出方法的话，那么就可能被优化成栈上分配。这样就无需在堆上分配内存，也无须进行垃圾回收了；
+
+*其实在现有的虚拟机中，并没有真正的实现栈上分配，其实是标量替换实现的*
+
+```java
+public static void main(String[] args) {
+	long a1 = System.currentTimeMillis();
+	for (int i = 0; i < 1000000; i++) {
+		alloc();
+	}
+	// 查看执行时间
+	long a2 = System.currentTimeMillis();
+	System.out.println("cost " + (a2 - a1) + " ms");
+	// 为了方便查看堆内存中对象个数，线程sleep
+	try {
+		Thread.sleep(100000);
+	} catch (InterruptedException e1) {
+		e1.printStackTrace();
+	}
+}
+private static void alloc() {
+	User user = new User();
+}
+static class User {}
+
+```
+在alloc方法中定义了User对象，但是并没有在方法外部引用他。也就是说，这个对象并不会逃逸到alloc外部。经过JIT的逃逸分析之后，就可以对其内存分配进行优化；
+
+- **未开启逃逸分析，指定JVM参数**
+	```
+	-Xmx4G -Xms4G -XX:-DoEscapeAnalysis -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError 
+	```
+	通过jmap命令，可以看到在堆中一共创建了100万个EscapeAnalysis$User对象，虽然在alloc方法中创建的User对象并没有逃逸到方法外部，但是还是被分配在堆内存中；
+	```
+	root@localhost~|⇒  jps
+	5095 Launcher
+	5096 EscapeAnalysis
+	5097 Jps
+	4922 
+	4957 RemoteMavenServer
+	root@localhost~|⇒  jmap -histo 5096
+
+	num     #instances         #bytes  class name
+	----------------------------------------------
+	1:           557       67396184  [I
+	2:       1000000       16000000  com.learning.example.jvm.optimization.EscapeAnalysis$User
+	3:          2947        1353320  [B
+	4:          5138         756256  [C
+	```
+- **开启逃逸分析，指定JVM参数**
+	```
+	-Xmx4G -Xms4G -XX:+DoEscapeAnalysis -XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError
+	```
+	开启了逃逸分析之后（-XX:+DoEscapeAnalysis），在堆内存中只有12万多个，而因为堆上分配的被优化成了栈上分配，所以GC次数明显减少
+	```
+	num     #instances         #bytes  class name
+	----------------------------------------------
+	1:           583       81745912  [I
+	2:        122982        1967712  com.learning.example.jvm.optimization.EscapeAnalysis$User
+	3:          2009        1200336  [B
+	4:          4250         623352  [C
+
+	```
+
+
+### 14.1.5、总结
+
+逃逸分析技术并不成熟，其根本原因就是无法保证逃逸分析的性能消耗一定能高于他的消耗，虽然经过逃逸分析可以做标量替换、栈上分配、和锁消除。但是逃逸分析自身也是需要进行一系列复杂的分析的，这其实也是一个相对耗时的过程
+
 ## 14.2
 
 # 15、钩子函数(ShutdownHook)
@@ -1678,6 +1836,7 @@ Java 堆栈跟踪工具(Stack Trace for Java)：
 * [ClassLoader机制](http://www.hollischuang.com/archives/199)
 * [JVM字节码执行引擎](https://blog.csdn.net/dd864140130/article/details/49515403)
 * [JVM逃逸分析](https://my.oschina.net/hosee/blog/638573)
+* [深入理解Java逃逸分析](http://www.hollischuang.com/archives/2583)
 * [内存管理工具Memory Analyzer的使用](https://www.zybuluo.com/frank-shaw/note/206287)
 * [Java代码与编译过程](http://www.codeceo.com/article/java-complie-run.html)
 * [对象的内存布局](https://segmentfault.com/a/1190000009740021)
